add chromium.conf